# mechanics

./: Cargo.toml
lib/stuff/: Cargo.toml
lib/stuff/src/: ball.rs  benchmark.rs  cli.rs  fixed_frame_count_diagnostics_plugin.rs  lib.rs  my_color.rs  random.rs  setup.rs  stepping.rs
src/: main.rs
