[package]
name = "stuff"
version = "0.1.0"
edition = "2021"

[features]
stepping = ["bevy/bevy_debug_stepping"]

[dependencies]
bevy.workspace = true
rand_core.workspace = true
bevy_app.workspace = true
bevy_rand.workspace = true
bevy_prng.workspace = true
scarlet.workspace = true
clap = { version = "4.5.23", features = ["derive"] }
